# Open-QuizUI

./: .gitignore  LICENSE  OpenQuizUI-Function.py  OpenQuizUI-Tool.py  OpenQuizUI.py  Quizzer.py  README.md  pyproject.toml
.github/workflows/: pytest.yml
examples/: Claude_nothink.html  Gemini_nothink.html  Gemma_50_questions_numbered_think.html  Gemma_MathJax_think.html  Qwen_french_think.html
src/: temp.json
src/openquizui/: quiz_function.py  quiz_tool.py
tests/: test_tool.py  test_units.py  test_visual.py
tests/test_files/: Claude_nothink.json  Gemini_nothink.json  Gemma_50_pipe_delemited_answers.json  Gemma_50_questions_numbered_think.json  Gemma_MathJax_think.json  Gemma_numbered_bold_key.json  Qwen_french_think.json
